2008-06-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* i18n/*, scripts/extract-messages.sh: Added additional resources
	for .pot and .po file generation to integrate with
	Rosetta/Launchpad. Includes pt and es initial translations.

	* avogadro/src/CMakeLists.txt: Use a file glob for ts files to
	build into qm files.

2008-06-03  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engine.h, libavogadro/src/extension.h,
	libavogadro/src/tool.h: Bumped our plugin version to 1.1 - should help
	with bugs 1973909 and 1982102 - warning a make clean is needed.

2008-06-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/engines/dipoleengine.*: New dipole moment engine
	-- needs more work, but displays dipole moments from Gaussian,
	GAMESS and Q-Chem output  with recent OB-trunk.

2008-06-02  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalengine.cpp: Fixed bug 1968565 -
	orbitals are now cleared correctly along with everything else.

2008-05-30  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.*: Implemented
	showing and hiding of the preview text - defaults to shown.

	* libavogadro/src/extensions/CMakeLists.txt,
	libavogadro/src/extensions/templateextension.*: Fixed up the template
	extension so that it would actually compile, added an example minimal
	entry in the CMake file too (commented out).

2008-05-30  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/mainwindow.cpp: emit enableEngineSettingsButton(false)
	when you delete an engine. Otherwise when you pressed "Settings...",
	it would segfault.

2008-05-30  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/glwidget.cpp, libavogadro/src/toolgroup.cpp,
	avogadro/src/mainwindow.cpp: In windows, use
	QCoreApplication::applicationDirPath() to find the plugins. 
	(fixes #1977338)

2008-05-30  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
