@@ -1,3 +1,8 @@
+2008-06-04  Marcus D. Hanwell  <marcus@cryos.org>
+
+	* avogadro/src/addenginedialog.cpp: Fixes bug 1984080 - the added
+	engine was somewhat random before.
+
 2008-06-03  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* i18n/*, scripts/extract-messages.sh: Added additional resources
